# RMCS

./: .gitmodules  README.md
.script/: launch-lidar  launch-lidar-rviz2
rmcs_ws/src/auto_aim_test/: CMakeLists.txt  package.xml
rmcs_ws/src/auto_aim_test/src/: main.cpp
rmcs_ws/src/rmcs_bringup/config/: dart_auto.yaml  gantry.yaml  mecanum-hero.yaml  motor-example.yaml  mycomponents.yaml  steering-infantry.yaml
rmcs_ws/src/rmcs_core/: package.xml  plugins.xml
rmcs_ws/src/rmcs_core/src/broadcaster/: value_broadcaster.cpp
rmcs_ws/src/rmcs_core/src/controller/chassis/: chassis_controller.cpp  omni_wheel_controller.cpp
rmcs_ws/src/rmcs_core/src/controller/dartlauncher/: gantry_controller.cpp  launch_controller.cpp
rmcs_ws/src/rmcs_core/src/controller/mycomponents/: component_a.cpp  component_b.cpp
rmcs_ws/src/rmcs_core/src/controller/pid/: cross_couple_controller.cpp  cross_coupled_controller.cpp  error_pid_controller.cpp  filter.hpp  pid_calculator.hpp  pid_controller.cpp
rmcs_ws/src/rmcs_core/src/examples/hardware/: device_example.cpp  single_cboard.cpp
rmcs_ws/src/rmcs_core/src/examples/remote_controller/: remote_controller.cpp
rmcs_ws/src/rmcs_core/src/hardware/: dartlauncher.cpp  steering-infantry.cpp  tunnel_infantry.cpp
rmcs_ws/src/rmcs_core/src/hardware/device/: lk_motor.hpp  supercap.hpp
rmcs_ws/src/rmcs_core/src/referee/: status.cpp
rmcs_ws/src/rmcs_core/src/referee/command/: interaction.cpp
rmcs_ws/src/rmcs_msgs/include/rmcs_msgs/: robots_hp.hpp
rmcs_ws/src/rmcs_msgs/msg/: AutoAimSync.msg
(+4 files in other folders)
